[gd_scene load_steps=3 format=3 uid="uid://bf4y3dlcjpw2g"]

[ext_resource type="Script" path="res://scripts/GameBoard.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="2_manager"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_manager")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 360)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnDisplay" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 120.0

[node name="TurnLabel" type="Label" parent="UI/TurnDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -50.0
text = "PLAYER'S TURN
Actions: 1/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="UI/TurnDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -10.0
text = "End Turn"

[node name="GameInfo" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -80.0
offset_right = 400.0
offset_bottom = -10.0
text = "Grid Battle Tactics
Left click: Select/Move | Right click: Attack"
vertical_alignment = 1

[node name="PlayerIndicator" type="Panel" parent="UI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0

[node name="PlayerLabel" type="Label" parent="UI/PlayerIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
text = "PLAYER
(Blue Pieces)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyIndicator" type="Panel" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = 60.0

[node name="EnemyLabel" type="Label" parent="UI/EnemyIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
text = "ENEMY
(Red Pieces)"
horizontal_alignment = 1
vertical_alignment = 1